--- a/DS Porject.cbp
+++ b/DS Porject.cbp
@@ -7,10 +7,11 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/DSPorject" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/DSProject" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="TC3_basic/testCase03 TC3_basic/testMap" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
